# IronIngot

./: .env.example  Cargo.toml  docker-compose.yml  dockerfile
.github/workflows/: docker-image.yml
src/: application_commands.rs  main.rs  mongo_conn.rs  startup.rs
src/commands/: mod.rs
src/commands/common/: interaction_error.rs  permissions_check.rs  slash_commands.rs
src/commands/manage/: mod.rs  setmodrole.rs
src/commands/music/: join.rs  leave.rs  mod.rs  nowplaying.rs  play.rs  queue.rs  skip.rs  volume.rs
src/dbmodels/: guild.rs
