[package]
name = "ironingot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.4" , features = ["json"] }
serde_json = "1.0.79"
rand = "0.8.4"
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"]}

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend", "voice", "unstable_discord_api"]
version = "0.11"

[dependencies.songbird]
version = "0.3.0"
features = ["builtin-queue"]